--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react": "^16.10.2",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
